fix mobile menu overflow

--- a/src/components/menu/menu.module.scss
+++ b/src/components/menu/menu.module.scss
@@ -7,7 +7,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100svh;
   overflow: hidden;
   background-color: hsl(229, 31%, 21%, 95%);
   padding: 42px 32px;
